--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-waypoint": "^8.0.3",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.3",
     "styled-components": "^3.4.9"
