--- a/package.json
+++ b/package.json
@@ -14,13 +14,21 @@
     "npm": "^6.4.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-fittext": "^1.0.0",
+    "react-mailto": "^0.4.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-scroll": "^1.7.10",
+    "react-scroll-parallax": "^1.3.5",
+    "react-social-icons": "^3.0.0",
+    "react-typography": "^0.16.13",
     "react-waypoint": "^8.0.3",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.3",
-    "styled-components": "^3.4.9"
+    "styled-components": "^3.4.9",
+    "typography": "^0.16.17",
+    "typography-theme-noriega": "^0.15.10"
   },
   "scripts": {
     "start": "react-scripts start",
